# ocp-typechecker

./: .gitignore  dune
tools/ocp-typechecker/: Makefile  dune  typecheck_args.ml  typecheck_ctype.mli  typecheck_expr.ml  typecheck_flags.ml  typecheck_main.ml  typecheck_report.ml  typecheck_typecore2.ml  typecheck_types.ml  typecheck_typing.ml  typecheck_uf.ml
